--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -13,9 +13,17 @@
     
 <h1>My List of Education</h1>
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce</h2>
+<h3>Course Details</h3>
+<p>A blend of IT courses including IT Architecture, IT Systems, Data
+    analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
+    Human Resources, Accounting, Finance, and Global Business Management.</p>
 <h2>University of Leeds - Exchange</h2>
+<h3>Course Details</h3>
+<p>Three open electives and a upper liberal class, including Diversity Management, British Politics
+    Operations and Supply Chain Management, and Organizational Theory</p>
 <h2>Earl Haig Secondary School - Ontario Secondary School Diploma</h2>
-
-
+<h3>Course Details</h3>
+<p>Diverse set of courses includingEnglish, Mathematics, Physics, Chemistry,
+    Biology, Computer Science, Geography, History, Humanities</p>
 </body>
 </html>
