--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -12,18 +12,48 @@
 <body>
     
 <h1>My List of Education</h1>
+
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce</h2>
 <h3>Course Details</h3>
 <p>A blend of IT courses including IT Architecture, IT Systems, Data
-    analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
-    Human Resources, Accounting, Finance, and Global Business Management.</p>
+    Analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
+    Human Resources, Accounting, Finance, Economics, and Global Business Management.</p>
+<h3>Course Highlight</h3>
+<p><b>Web Design and Management</b>- This course provide the fundamental knowledge and skills 
+    for designing, developing and managing effective websites for businesses. HTML5, 
+    Javascript, and CSS3 are taught in this course.</p>
+<h3>Awards and Achievements</h3>
+    <ol>
+        <li>Dean's List (2021)</li>
+        <li>Ted Rogers Bootcamps</li>
+    </ol>
+<h3>Extra-Curricular Activities</h3>
+    <ul>
+        <li>Ted Rogers ACE (2021)</li>
+        <li>Research Assistant Volunteer for Data Analysis Project</li>
+        <li>Member of Chinese Student Association</li>
+    </ul>
+
 <h2>University of Leeds - Exchange</h2>
 <h3>Course Details</h3>
 <p>Three open electives and a upper liberal class, including Diversity Management, British Politics
     Operations and Supply Chain Management, and Organizational Theory</p>
+
 <h2>Earl Haig Secondary School - Ontario Secondary School Diploma</h2>
 <h3>Course Details</h3>
-<p>Diverse set of courses includingEnglish, Mathematics, Physics, Chemistry,
+<p>Diverse set of courses including English, Mathematics, Physics, Chemistry,
     Biology, Computer Science, Geography, History, Humanities</p>
+<h3>Awards and Achievements</h3>
+    <ol>
+        <li>Honour Roll (2016, 2017)</li>
+        <li></li>
+    </ol>
+<h3>Extra-Curricular Activities</h3>
+    <ul>
+        <li>Captain of Cross Country Team (2019)</li>
+        <li>Member of Science Council</li>
+        <li>Member of Eco Council</li>
+        <li>Member of Leader's Collective</li>
+    </ul>
 </body>
 </html>
