--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -12,14 +12,15 @@
 <body>
     
 <h1>My List of Education</h1>
-
+<hr>
+<br>
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce (2020-2026)</h2>
 <h3>Course Details</h3>
 <p>A blend of IT courses including IT Architecture, IT Systems, Data
     Analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
     Human Resources, Accounting, Finance, Economics, and Global Business Management.</p>
 <h3>Course Highlight</h3>
-<p><b>Web Design and Management</b> - This course provide the fundamental knowledge and skills 
+<p><b>ITM780 Web Design and Management</b> - This course provide the fundamental knowledge and skills 
     for designing, developing and managing effective websites for businesses. HTML5, 
     Javascript, and CSS3 are taught in this course.</p>
 <h3>Awards and Achievements</h3>
