--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -16,13 +16,15 @@
 <br>
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce (2020-2026)</h2>
 <h3>Course Details</h3>
-<p>A blend of IT courses including IT Architecture, IT Systems, Data
+    <p>A blend of IT courses including IT Architecture, IT Systems, Data
     Analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
     Human Resources, Accounting, Finance, Economics, and Global Business Management.</p>
 <h3>Course Highlight</h3>
-<p><b>ITM780 Web Design and Management</b> - This course provide the fundamental knowledge and skills 
-    for designing, developing and managing effective websites for businesses. HTML5, 
-    Javascript, and CSS3 are taught in this course.</p>
+    <p><b>ITM780 Web Design and Management</b> - This course provide the fundamental knowledge and skills 
+    for designing, developing and managing effective websites for businesses. Beneficial webpage languages
+    such as HTML5, Javascript, and CSS3 are also taught in this course. It is a useful course because having 
+    a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
+    noticed by an employer in the future when looking for a job to kickstart your career.</p>
 <h3>Awards and Achievements</h3>
     <ol>
         <li>Dean's List (2021)</li>
@@ -38,12 +40,12 @@
 <br>
 <h2>University of Leeds - Exchange (Winter & Spring/Summer 2024)</h2>
 <h3>Course Details</h3>
-<p>Three open electives and a upper liberal class, including Diversity Management, British Politics
+    <p>Three open electives and a upper liberal class, including Diversity Management, British Politics
     Operations and Supply Chain Management, and Organizational Theory</p>
 <br>
 <h2>Earl Haig Secondary School - Ontario Secondary School Diploma (2016-2020)</h2>
 <h3>Course Details</h3>
-<p>Diverse set of courses including English, Mathematics, Physics, Chemistry,
+    <p>Diverse set of courses including English, Mathematics, Physics, Chemistry,
     Biology, Computer Science, Geography, History, Humanities</p>
     </ol>
 <h3>Extra-Curricular Activities</h3>
