--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -37,7 +37,7 @@
         <li>Research Assistant Volunteer for Data Analysis Project</li>
         <li>Member of Chinese Student Association</li>
     </ul>
-<a ref="https://www.torontomu.ca">Click here to visit the university homepage!</a>
+    <p><a ref="https://www.torontomu.ca">Click here to visit the university homepage!</a></p>
 <br>
 <h2>University of Leeds - Exchange (Winter & Spring/Summer 2024)</h2>
 <h3>Course Details</h3>
