--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -11,7 +11,7 @@
 </style>
 <body>
     
-<h1>My List of Education - Jonathan Lin</h1>
+<h1>My List of Education</h1><h2>- Jonathan Lin</h2>
 <hr>
 <br>
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce (2020-2026)</h2>
@@ -39,7 +39,7 @@
     </ul>
     <p><a href="https://www.torontomu.ca">Click here to visit the university homepage!</a></p>
 <br>
-<h2>University of Leeds - Exchange (Winter & Spring/Summer 2024)</h2>
+<h2>University of Leeds - Exchange Semester (Winter & Spring/Summer 2024)</h2>
 <h3>Course Details</h3>
     <p>Three open electives and a upper liberal class, including Diversity Management, British Politics
     Operations and Supply Chain Management, and Organizational Theory</p>
