--- a/itm780_lab2.html
+++ b/itm780_lab2.html
@@ -11,7 +11,7 @@
 </style>
 <body>
     
-<h1>My List of Education</h1><h2>- Jonathan Lin</h2>
+<h1>My List of Education<h2>- Jonathan Lin</h1></h2>
 <hr>
 <br>
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce (2020-2026)</h2>
