--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset=""utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-</style>
 <body>
 <h1>My List of Education</h1>
 <hr>
