--- a/index.html
+++ b/index.html
@@ -14,14 +14,28 @@
     <p>A blend of IT courses including IT Architecture, IT Systems, Data
     Analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
     Human Resources, Accounting, Finance, Economics, and Global Business Management.</p>
-<h3>Course Highlight</h3>
-    <p><b>ITM780 Web Design and Management</b> - This course provide the fundamental knowledge and skills 
-    for designing, developing and managing effective websites for businesses. Beneficial webpage languages
-    such as HTML5, Javascript, and CSS3 are also taught in this course. It is a useful course because having 
-    a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
-    noticed by an employer in the future when looking for a job to kickstart your career.</p>
+<h3>Course Highlights</h3>
+<div class="course-highlights"></div>
+    <div class="description">
+        <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf"><b>ITM780 Web Design and Management</b></a></p>
+        <p> - This course provide the fundamental knowledge and skills 
+            for designing, developing and managing effective websites for businesses. Beneficial webpage languages
+            such as HTML5, Javascript, and CSS3 are also taught in this course. It is a useful course because having 
+            a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
+            noticed by an employer in the future when looking for a job to kickstart your career.</p>
+    </div>
+    <div class="description">
+        <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf">ITM706 - Enterprise Architecture</a></p>
+        <p>
+            This course covers business analysis, organizational processes, enterprise architecture, and security/risk
+            management, focusing on the design and management of enterprise business processes through IT capabilities.
+            Explore frameworks for infrastructure management and learn to represent organizational business models and 
+            technology infrastructures. Additionally, they will develop skills to effectively communicate technology 
+            architecture strategies to a general business audience.</p>
+    </div>
+</div>
 <h3>Awards and Achievements</h3>
-    <ol>
+    <ol class="awards-and-achievements">
         <li>Dean's List (2021)</li>
         <li>Ted Rogers Bootcamps</li>
         <li>ADaPT - Advanced Digital and Professional Training</li>
