--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <div class="course-highlights"></div>
     <div class="description">
         <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf"><b>ITM780 Web Design and Management</b></a></p>
-        <p> - This course provide the fundamental knowledge and skills 
+        <p> This course provide the fundamental knowledge and skills 
             for designing, developing and managing effective websites for businesses. Beneficial webpage languages
             such as HTML5, Javascript, and CSS3 are also taught in this course. It is a useful course because having 
             a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
             noticed by an employer in the future when looking for a job to kickstart your career.</p>
     </div>
     <div class="description">
-        <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf">ITM706 - Enterprise Architecture</a></p>
+        <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf"><b>ITM706 - Enterprise Architecture</b></a></p>
         <p>
             This course covers business analysis, organizational processes, enterprise architecture, and security/risk
             management, focusing on the design and management of enterprise business processes through IT capabilities.
