--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Analytics, Cybersecurity, as well as courses in other fields of business such as Marketing, 
     Human Resources, Accounting, Finance, Economics, and Global Business Management.</p>
 <h3>Course Highlights</h3>
-<div class="course-highlights"></div>
+<div class="course-highlights">
     <div class="description">
         <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf"><b>ITM780 Web Design and Management</b></a></p>
         <p> This course provide the fundamental knowledge and skills 
@@ -26,8 +26,7 @@
     </div>
     <div class="description">
         <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf"><b>ITM706 - Enterprise Architecture</b></a></p>
-        <p>
-            This course covers business analysis, organizational processes, enterprise architecture, and security/risk
+        <p> This course covers business analysis, organizational processes, enterprise architecture, and security/risk
             management, focusing on the design and management of enterprise business processes through IT capabilities.
             Explore frameworks for infrastructure management and learn to represent organizational business models and 
             technology infrastructures. Additionally, they will develop skills to effectively communicate technology 
