--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     Human Resources, Accounting, Finance, Economics, and Global Business Management.</p>
 <h3>Course Highlights</h3>
 <div class="course-highlights"> 
+    <div class="courses">
         <div class="course-code">
-            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf"><b>ITM780 Web Design and Management</b></a></p>
+            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf">ITM780 Web Design and Management</a></p>
         </div>
         <div class="course-desc"><p> This course provide the fundamental knowledge and skills 
             for designing, developing and managing effective websites for businesses. Beneficial webpage languages
@@ -25,13 +26,14 @@
             a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
             noticed by an employer in the future when looking for a job to kickstart your career.</p></div>
         <div class="course-code">
-            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf"><b>ITM706 - Enterprise Architecture</b></a></p>
+            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf">ITM706 - Enterprise Architecture</a></p>
         </div>
         <div class="course-desc"><p> This course covers business analysis, organizational processes, enterprise architecture, and security/risk
             management, focusing on the design and management of enterprise business processes through IT capabilities.
             Explore frameworks for infrastructure management and learn to represent organizational business models and 
             technology infrastructures. Additionally, they will develop skills to effectively communicate technology 
             architecture strategies to a general business audience.</p></div>
+    </div>
 </div>
 <h3>Awards and Achievements</h3>
     <ol class="awards-and-achievements">
