--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
             noticed by an employer in the future when looking for a job to kickstart your career.</p></div>
         <div class="course-code">
+    </div>
+    <div class="courses">
             <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf">ITM706 - Enterprise Architecture</a></p>
         </div>
         <div class="course-desc"><p> This course covers business analysis, organizational processes, enterprise architecture, and security/risk
