--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
             for designing, developing and managing effective websites for businesses. Beneficial webpage languages
             such as HTML5, Javascript, and CSS3 are also taught in this course. It is a useful course because having 
             a personal webpage portfolio that is effectively designed will significantly raise the chances to be 
-            noticed by an employer in the future when looking for a job to kickstart your career.</p></div>
-        <div class="course-code">
+            noticed by an employer in the future when looking for a job to kickstart your career.</p>
+        </div>
     </div>
     <div class="courses">
+        <div class="course-code">
             <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf">ITM706 - Enterprise Architecture</a></p>
         </div>
         <div class="course-desc"><p> This course covers business analysis, organizational processes, enterprise architecture, and security/risk
             management, focusing on the design and management of enterprise business processes through IT capabilities.
             Explore frameworks for infrastructure management and learn to represent organizational business models and 
             technology infrastructures. Additionally, they will develop skills to effectively communicate technology 
-            architecture strategies to a general business audience.</p></div>
+            architecture strategies to a general business audience.</p>
+        </div>
     </div>
 </div>
 <h3>Awards and Achievements</h3>
