--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
     </ul>
     <p><a href="https://www.torontomu.ca">Click here to visit the university homepage!</a></p>
 <br>
+<div class="UniLeeds">
 <h2>University of Leeds - Exchange Semester (Winter & Spring/Summer 2024)</h2>
 <h3>Course Details</h3>
     <p>Three open electives and a upper liberal class, including Diversity Management, British Politics
     Operations and Supply Chain Management, and Organizational Theory</p>
+</div>
 <br>
 <h2>Earl Haig Secondary School - Ontario Secondary School Diploma (2016-2020)</h2>
 <h3>Course Details</h3>
