--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
         <li>Member of Eco Council</li>
         <li>Member of Leader's Collective</li>
     </ul>
+    <script src="script.js"></script>
 </body>
 </html>
