--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h1>My List of Education</h1>
 <hr>
 <br>
+<button id="nameButton">Enter Your Name</button>
+<p id="displayName"></p>
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce (2020-2026)</h2>
 <h3>Course Details</h3>
     <p>A blend of IT courses including IT Architecture, IT Systems, Data
