--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
         <li>Member of Eco Council</li>
         <li>Member of Leader's Collective</li>
     </ul>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
