--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br>
 <button id="nameButton">Enter Your Name</button>
 <p id="displayName"></p>
-<img id="myImage" src="Jonathan Lin Window.jpeg" alt="Myself" style="width: 100px; cursor: pointer;" onclick="enlargeImage()">
+<img id="image" src="Jonathan Lin Window.jpeg" alt="Myself" style="width: 100px; cursor: pointer;" onclick="enlargeImage()">
 <h2>Toronto Metropolitan Univeristy - Bachelor of Commerce (2020-2026)</h2>
 <h3>Course Details</h3>
     <p>A blend of IT courses including IT Architecture, IT Systems, Data
