--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 <body>
 <h1>My List of Education</h1>
 <hr>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li>
+            <a href="#">Portfolio</a>
+            <ul class="submenu">
+                <li><a href="service1.html">Work Experiences</a></li>
+                <li><a href="service2.html">Certifications & Awards</a></li>
+            </ul>
+        </li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
 <br>
 <button id="nameButton">Enter Your Name</button>
 <p id="displayName"></p>
