--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="course-highlights"> 
     <div class="courses">
         <div class="course-code">
-            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf">ITM780 Web Design and Management</a></p>
+            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM780.pdf" class="courselinks">ITM780 Web Design and Management</a></p>
         </div>
         <div class="course-desc"><p> This course provide the fundamental knowledge and skills 
             for designing, developing and managing effective websites for businesses. Beneficial webpage languages
@@ -33,7 +33,7 @@
     </div>
     <div class="courses">
         <div class="course-code">
-            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf">ITM706 - Enterprise Architecture</a></p>
+            <p><a href="https://www.torontomu.ca/information-technology-management/course-outlines/ITM706.pdf" class="courselinks">ITM706 - Enterprise Architecture</a></p>
         </div>
         <div class="course-desc"><p> This course covers business analysis, organizational processes, enterprise architecture, and security/risk
             management, focusing on the design and management of enterprise business processes through IT capabilities.
