--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     turns it into a JSON string, and saves it to the local storage
     The "Clear" button resets all input fields using the HTML reset method -->
 <body>
+    <nav id="navBar"></nav>
     <h1>Contact Me</h1>
 <form id="contactForm">
     
@@ -81,5 +82,5 @@
     <button type="submit" id="submitButton">Submit</button>
     <button type="reset" id="clearButton">Clear</button>
 </form>
-
+</body>
 <script src="data.jss"></script>
