--- a/contact.html
+++ b/contact.html
@@ -83,4 +83,5 @@
     <button type="reset" id="clearButton">Clear</button>
 </form>
 </body>
-<script src="data.jss"></script>
+<script src="data.js"></script>
+<script src="main.js""></script>
