--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </ul>
 
 <div>
-    <iframe src="https://archive.org/embed/ENGLISHQuestions_201801" width="500" height="60" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen allow="autoplay"></iframe>
+    <iframe src="https://archive.org/embed/ENGLISHQuestions_201801" width="500" height="60" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
     <figcaption>Figure 1. Audio recording of [description]. Source: [Your Recording / Archive.org / Proper Citation, APA 7th ed.].</figcaption>
 </div>
 
