--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <iframe src="https://archive.org/embed/ENGLISHQuestions_201801" width="500" height="60" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
     <figcaption>Figure 1. Audio recording of [description]. Source: [Your Recording / Archive.org / Proper Citation, APA 7th ed.].</figcaption>
 </div>
-
-
+<br>
+<button onclick="toggleAccessibleColor()">Toggle Accessible Color Mode</button>
     <script src="main.js"></script>
 </body>
 </html>
