--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <figcaption>Figure 1. Audio recording of [description]. Source: [Your Recording / Archive.org / Proper Citation, APA 7th ed.].</figcaption>
 </div>
 <br>
-<button onclick="toggleAccessibleColor()">Toggle Accessible Color Mode</button>
+<button onclick="AccessibleColor()">Toggle Accessible Color Mode</button>
     <script src="main.js"></script>
 </body>
 </html>
