--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
 <button onclick="AccessibleColor()">Toggle Accessible Color Mode</button>
 <br>
 <h1>My Three Images</h1>
-    
 <div class="myImages">
     <div class="image-container">
         <img src="IMG_9312.jpg" alt="Photo of me in London" id="image1">
@@ -102,8 +101,7 @@
         <p class="alt-text" id="altText3">Date: 2024-06-10, Location: Paris, France</p>
     </div>
 </div>
-
-<button onclick="showAltText()">Show Alt Text Descriptions</button>
+<button onclick="showAltText()">Show Alt Text</button>
     <script src="main.js"></script>
 </body>
 </html>
