--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 <div class="myImages">
     <div class="image-container">
         <img src="IMG_9312.jpg" alt="Photo of me in London" id="image1">
-        <p class="alt-text" id="altText1">Date: 2024-02-19, Location: London, England</p>
+        <p class="alt-text" id="altText1">Photo of me in London. Date: 2024-02-19, Location: London, England</p>
     </div>
     <div class="image-container">
         <img src="IMG_2762.jpg" alt="Photo of me in Rome" id="image2">
-        <p class="alt-text" id="altText2">Date: 2024-04-18, Location: Rome, Italy</p>
+        <p class="alt-text" id="altText2">Photo of me in Rome. Date: 2024-04-18, Location: Rome, Italy</p>
     </div>
     <div class="image-container">
         <img src="IMG_4797.jpg" alt="Photo of me in Paris" id="image3">
-        <p class="alt-text" id="altText3">Date: 2024-06-10, Location: Paris, France</p>
+        <p class="alt-text" id="altText3">Photo of me in Paris. Date: 2024-06-10, Location: Paris, France</p>
     </div>
 </div>
 <button onclick="showAltText()">Show Alt Text</button>
