--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <br>
 <div>
     <iframe src="https://archive.org/embed/ENGLISHQuestions_201801" width="500" height="60" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-    <figcaption>Figure 1. Audio recording of [description]. Source: [Your Recording / Archive.org / Proper Citation, APA 7th ed.].</figcaption>
+    <figcaption>Figure 1. Background Audio for Website. milos_test. (2018, January 16). ENGLISH Questions. Retrieved from https://archive.org/details/ENGLISHQuestions_201801/Sunnyside.ogg</figcaption>
 </div>
 <br>
 <button onclick="AccessibleColor()">Toggle Accessible Color Mode</button>
