--- a/seo.html
+++ b/seo.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <nav id="navBar"></nav>
     <h1>SEO</h1>
     <h2>SEO Strategies</h2>
     <p>Keyword research is a technique used for on-page SEO. It involves finding relevant keywords that users frequently search for and strategically integrating them into website content to enhance search engine visibility and relevance (Duggal, 2024). Effective keyword research helps create content that engages audience members and ranks well on search engines by targeting the right search terms. Knowing how search engines evaluate content based on expertise, authority, and trust (EAT) makes it easier to choose relevant keywords that match users' needs. Using long-tail keywords in URLs, image alt tags, and throughout your content can boost your SEO, bringing in more targeted traffic (310 Creative, 2024).</p>
