--- a/seo.html
+++ b/seo.html
@@ -15,3 +15,4 @@
     <p>High-quality backlinks are essential for boosting a website's authority and search rankings. It is a type of Off-Page SEO strategy to enhance the website's authority, credibility, and relevance in the eyes of search engines, leading to higher rankings and increased organic traffic (Duggal, 2024). Techniques like guest blogging allow the contribution of valuable content to reputable sites, building authority and increasing traffic. The skyscraper technique involves creating content that surpasses existing high-performing articles, helps earn quality backlinks and increases visibility. Broken link building focuses on replacing broken links on relevant sites with content, securing backlinks and improving SEO (310 Creative, 2024).</p>
     <br>
     <h2>SMO Strategies</h2>
+    <script src="main.js"></script>
