--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+<html>
 <head>  
-    <meta charset=""utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <nav id="navBar"></nav>
     <h1>Portfolio</h1>
+<script src="main.js"></script>
+</body>
+</html>
