--- a/seo.html
+++ b/seo.html
@@ -16,6 +16,13 @@
     <p>High-quality backlinks are essential for boosting a website's authority and search rankings. It is a type of Off-Page SEO strategy to enhance the website's authority, credibility, and relevance in the eyes of search engines, leading to higher rankings and increased organic traffic (Duggal, 2024). Techniques like guest blogging allow the contribution of valuable content to reputable sites, building authority and increasing traffic. The skyscraper technique involves creating content that surpasses existing high-performing articles, helps earn quality backlinks and increases visibility. Broken link building focuses on replacing broken links on relevant sites with content, securing backlinks and improving SEO (310 Creative, 2024).</p>
     <br>
     <h2>SMO Strategies</h2>
+    <p>The Use of Hashtags boosts visibility and exposure, especially on platforms like Twitter and Instagram. It’s important to tailor hashtags to the specific platform; what works on one website might not be effective for another. Creative uses of hashtags, such as contests or campaigns, can further enhance their impact on both platforms (eclincher, 2024).</p>
+    <br>
+    <p>Adding social media buttons to a website makes it easier for visitors to connect with the creator on different platforms. Placing them in the header or footer ensures they’re visible on every page. Including social sharing buttons at the end of blog posts or articles also encourages readers to share the content, increasing its reach (WebFX, 2024).</p>
+    <br>
+    <p>Scheduling Social Media Posts by using scheduling tools makes it easier to stay consistent without logging in multiple times a day. Scheduling posts at the right times ensures the audience sees content when they’re most active, which can vary depending on the platform. Each platform also has its own posting norms. For example, too many posts on Facebook might annoy followers, while on Twitter, it is normal to post several times a day. Finding the right balance helps keep followers engaged without overwhelming them (WebFX, 2024).</p>
+    <br>
+    <h3>The SEO technique I have chosen for my website is Optimizing on-page element. This is done by adding titles, meta descriptions, and header tags.</h3>
     <script src="main.js"></script>
 </body>
 </html>
