--- a/seo.html
+++ b/seo.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="desc" content="seo information">
+    <meta name="keywords" content="seo,smo,strategies,techniques">
+    <meta name="author" content="Jonathan Lin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
