--- a/seo.html
+++ b/seo.html
@@ -26,7 +26,14 @@
     <p>Scheduling Social Media Posts by using scheduling tools makes it easier to stay consistent without logging in multiple times a day. Scheduling posts at the right times ensures the audience sees content when they're most active, which can vary depending on the platform. Each platform also has its own posting norms. For example, too many posts on Facebook might annoy followers, while on Twitter, it is normal to post several times a day. Finding the right balance helps keep followers engaged without overwhelming them (WebFX, 2024).</p>
     <br>
     <h3>The SEO technique I have chosen for my website is Optimizing on-page element. This is done by adding titles, meta descriptions, and header tags.</h3>
-    <p>References10 Social Media Optimization Techniques. (2024, July 19). Www.eclincher.com. https://www.eclincher.com/articles/10-ways-to-optimize-social-mediaDuggal, N. (2022, April 26). 12 Types of SEO : Strategies You Need to Know (Complete Guide) | Simplilearn. Simplilearn.com. https://www.simplilearn.com/main-types-of-seo-techniques-in-digital-marketing-articleLeach, C. (2019, December 10). 18 Most Effective SEO Techniques To Grow Organic Traffic In 2025. 310creative.com; 310 Creative. https://www.310creative.com/blog/seo-techniques-to-grow-organic-trafficSocial Media Optimization: What Is It (+7 SMO Tips)! (n.d.). WebFX. https://www.webfx.com/social-media/learn/social-optimization/</p>
+    <p>References
+    <p>10 Social Media Optimization Techniques. (2024, July 19). Www.eclincher.com. 
+        https://www.eclincher.com/articles/10-ways-to-optimize-social-media
+        Duggal, N. (2022, April 26). 12 Types of SEO : Strategies You Need to Know (Complete Guide) | Simplilearn. 
+        Simplilearn.com. https://www.simplilearn.com/main-types-of-seo-techniques-in-digital-marketing-article
+        Leach, C. (2019, December 10). 18 Most Effective SEO Techniques To Grow Organic Traffic In 2025. 
+        310creative.com; 310 Creative. https://www.310creative.com/blog/seo-techniques-to-grow-organic-traffic
+        Social Media Optimization: What Is It (+7 SMO Tips)! (n.d.). WebFX. https://www.webfx.com/social-media/learn/social-optimization/</p>
     <script src="main.js"></script>
 </body>
 </html>
